field-forms/objects/Form_Finding__c/Form_Finding__c.object-meta.xml
<CustomObject>
    <description>Exception / non-compliance record generated when a Form_Answer__c fails its catalog Pass_Criteria__c. The "outcome layer" that converts raw answers into a tracked findings list for compliance audits (Steritech-class). Master-detail to Linked_Form__c so findings cascade-delete with the response and inherit sharing. Per Pillar 5: a finding with Photo_Required__c AND NOT Photo_Attached__c AND Status__c='Open' is a "blocking finding" that hard-blocks form submission until resolved or marked as Resolved-Exception via the override workflow.</description>
    <label>Form Finding</label>
    <nameField>
        <displayFormat>FND-{000000}</displayFormat>
        <label>Form Finding Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Findings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>