field-forms/objects/Form_Finding__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User responsible for resolving the finding. Defaults to null on auto-creation (admin / supervisor assigns later). Renderer "Findings panel" filters by Assigned_To = current user when present.</description>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Form Findings</relationshipLabel>
    <relationshipName>Form_Findings</relationshipName>
    <type>Lookup</type>
</CustomField>