field-forms/objects/Form_Finding__c/fields/Blocks_Submission__c.field-meta.xml
<CustomField>
    <fullName>Blocks_Submission__c</fullName>
    <description>True when the finding currently prevents form submission. Counted into Linked_Form__c.Findings_Blocking_Count__c by the scoring trigger. Resolved-Exception, Auto-Resolved, Resolved and Waived statuses all unblock; In Progress with photo attached also unblocks.</description>
    <formula>Photo_Required__c &amp;&amp; NOT(Photo_Attached__c) &amp;&amp; ISPICKVAL(Status__c, "Open")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blocks Submission</label>
    <type>Checkbox</type>
</CustomField>