field-forms/objects/Form_Finding__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Optional follow-up deadline for resolving the finding. Customer-driven; admins typically set this when assigning critical findings for remediation.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>