field-forms/objects/Form_Finding__c/fields/Exception_Detail__c.field-meta.xml
<CustomField>
    <fullName>Exception_Detail__c</fullName>
    <description>Free-text justification accompanying Exception_Reason__c. Required by the renderer when Exception_Reason__c = Other; encouraged for the other reasons. Length 1024 keeps the audit-trail concise while leaving room for context.</description>
    <label>Exception Detail</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>