field-forms/objects/Form_Finding__c/fields/Exception_Reason__c.field-meta.xml
<CustomField>
    <fullName>Exception_Reason__c</fullName>
    <description>Justification category captured by the override modal. Required by the renderer when transitioning to Status__c = Resolved-Exception. Picklist values mirror the four options shown in the doc's exception-modal wireframe.</description>
    <label>Exception Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No camera access</fullName>
            </value>
            <value>
                <fullName>Hazardous area</fullName>
            </value>
            <value>
                <fullName>Equipment unavailable</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>