field-forms/objects/Form_Finding__c/fields/Form_Answer__c.field-meta.xml
<CustomField>
    <fullName>Form_Answer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Form_Answer__c whose Pass_Criteria evaluation produced this finding. SetNull keeps the audit trail when an answer is deleted — the finding survives as historical record.</description>
    <label>Form Answer</label>
    <referenceTo>Form_Answer__c</referenceTo>
    <relationshipLabel>Form Findings</relationshipLabel>
    <relationshipName>Form_Findings</relationshipName>
    <type>Lookup</type>
</CustomField>