field-forms/objects/Form_Finding__c/fields/Form_Question_Catalog__c.field-meta.xml
<CustomField>
    <fullName>Form_Question_Catalog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Catalog entry the finding was generated against. Stored at finding-creation time so the finding remains meaningful even if the binding (Form_Question__c) is later deleted or repointed to a different catalog entry. Reports / dashboards aggregate findings by catalog entry to surface recurring issues.</description>
    <label>Form Question Catalog</label>
    <referenceTo>Form_Question_Catalog__c</referenceTo>
    <relationshipLabel>Form Findings</relationshipLabel>
    <relationshipName>Form_Findings</relationshipName>
    <type>Lookup</type>
</CustomField>