field-forms/objects/Form_Finding__c/fields/Linked_Form__c.field-meta.xml
<CustomField>
    <fullName>Linked_Form__c</fullName>
    <description>Master-detail parent. Findings cascade-delete with their Linked_Form (the response record) and inherit its sharing — ControlledByParent satisfies Open Question #1 in the design doc by default.</description>
    <label>Linked Form</label>
    <referenceTo>Linked_Form__c</referenceTo>
    <relationshipLabel>Form Findings</relationshipLabel>
    <relationshipName>Form_Findings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>