field-forms/objects/Form_Finding__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Free-text remediation / context notes from the tech or reviewer. 32K LongTextArea matches Form_Answer__c.Related_Comment__c precedent.</description>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>