field-forms/objects/Form_Finding__c/fields/Photo_Attached__c.field-meta.xml
<CustomField>
    <fullName>Photo_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True once a ContentDocumentLink exists for this finding (or on the underlying Form_Answer__c). Maintained by a ContentDocumentLink trigger or by the renderer's photo-upload flow — wave 36 ships the field; the trigger ships with the photo-required UX wave.</description>
    <label>Photo Attached</label>
    <type>Checkbox</type>
</CustomField>