field-forms/objects/Form_Finding__c/fields/Photo_Required__c.field-meta.xml
<CustomField>
    <fullName>Photo_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mirrors Form_Question_Catalog__c.Failure_Photo_Required__c at finding-creation time. Combines with Photo_Attached__c + Status__c to drive Blocks_Submission__c.</description>
    <label>Photo Required</label>
    <type>Checkbox</type>
</CustomField>