field-forms/objects/Form_Finding__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>Mirrors Form_Question_Catalog__c.Failure_Severity__c at finding-creation time. Pinned so later changes to the catalog don't rewrite historical findings.</description>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <default>true</default>
                <label>Low</label>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>