field-forms/objects/Form_Finding__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Lifecycle state. Open = newly auto-created and unresolved. In Progress = an assignee acknowledged it. Resolved = manually closed by a reviewer. Auto-Resolved = the underlying answer flipped from failing to passing, the trigger marked the finding closed but kept it for audit. Resolved-Exception = the tech (or admin) recorded an exception via the override workflow; unblocks submit but logs the reason for review. Waived = an admin explicitly waived the finding without remediation.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Auto-Resolved</fullName>
            </value>
            <value>
                <fullName>Resolved-Exception</fullName>
            </value>
            <value>
                <fullName>Waived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>