field-forms/objects/Form_Finding__c/listViews/All_Open.listView-meta.xml
<ListView>
    <fullName>All_Open</fullName>
    <columns>NAME</columns>
    <columns>Severity__c</columns>
    <columns>Status__c</columns>
    <columns>Blocks_Submission__c</columns>
    <columns>Linked_Form__c</columns>
    <columns>Photo_Required__c</columns>
    <columns>Photo_Attached__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Resolved,Resolved-Exception,Auto-Resolved,Waived</value>
    </filters>
    <label>All Open</label>
</ListView>