field-forms/objects/Form_Finding__c/listViews/Assigned_To_Me.listView-meta.xml
<ListView>
    <fullName>Assigned_To_Me</fullName>
    <columns>NAME</columns>
    <columns>Severity__c</columns>
    <columns>Status__c</columns>
    <columns>Blocks_Submission__c</columns>
    <columns>Linked_Form__c</columns>
    <columns>Due_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Assigned_To__c</field>
        <operation>equals</operation>
        <value>$User.Id</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Resolved,Resolved-Exception,Auto-Resolved,Waived</value>
    </filters>
    <label>Assigned to Me</label>
</ListView>