field-forms/objects/Form_Finding__c/listViews/Blocking_Submit.listView-meta.xml
<ListView>
    <fullName>Blocking_Submit</fullName>
    <columns>NAME</columns>
    <columns>Severity__c</columns>
    <columns>Status__c</columns>
    <columns>Linked_Form__c</columns>
    <columns>Photo_Required__c</columns>
    <columns>Photo_Attached__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Blocks_Submission__c</field>
        <operation>equals</operation>
        <value>true</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Resolved,Resolved-Exception,Auto-Resolved,Waived</value>
    </filters>
    <label>Blocking Submit</label>
</ListView>